fixing gap between numbers

--- a/style.scss
+++ b/style.scss
@@ -74,7 +74,11 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 1.8em;
+        gap: 1em;
+
+        @media screen and (min-width: 50em) {
+            gap: 1.8em;
+        }
 
         &__number {
             width: 45px;
